# smolagents-gcc-crossref

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  agent.py  pyproject.toml  tools.py
ground_truth/: ground_truth.py
tests/: test_tools.py
