[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolagents-gcc-crossref"
version = "0.1.0"
description = "A simple smolagents agent application."
requires-python = ">=3.13"
dependencies = [
    "smolagents[litellm]>=1.26.0",
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "matplotlib>=3.10.9",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "astropy>=7.2.0",
    "tqdm>=4.68.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "black>=26.5.1",
    "pre-commit>=4.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
